<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_layout"
    android:background="@drawable/gradient_2"
    tools:context="com.molto.android.topquiz.Controller.MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/activity_main_greeting_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:text="@string/app_main_question"/>

    <EditText
        android:id="@+id/activity_main_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#00000000"
        android:gravity="center"
        android:hint="@string/app_main"/>

    <ImageButton
        android:id="@+id/activity_main_play_btn"
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:src="@drawable/play_circle"
        style="?android:attr/borderlessButtonStyle"
        android:gravity="center"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/app_main_play"/>

    <Button
        android:id="@+id/activity_main_score_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:theme="@style/MyButton"
        android:drawableStart="@drawable/trophy_variant"
        android:drawableLeft="@drawable/trophy_variant"
        android:text="@string/app_main_best_score"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:theme="@style/MyButton"
        android:text="@string/app_main_on_purpose"/>

</LinearLayout>
